--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -6,6 +6,7 @@
     
     <ScrollView>
         <Grid RowDefinitions="Auto, Auto, Auto, Auto, Auto" RowSpacing="20">
+            <!-- Search bar -->
             <StackLayout Grid.Row="0" Margin="20, 20, 20, 0" Orientation="Horizontal" Spacing="20">
                 <Entry Placeholder="Search a city:"
                        HorizontalOptions="FillAndExpand"/>
@@ -15,6 +16,21 @@
                         HorizontalOptions="End"
                         WidthRequest="30"
                         HeightRequest="30"/>
+            </StackLayout>
+            
+            <!-- City name with temperature and weather condition -->
+            <StackLayout Grid.Row="1" Orientation="Vertical">
+                <Label x:Name="CityName" 
+                    HorizontalOptions="Center"
+                    FontSize="40"
+                    TextColor="SlateGray"
+                    Text="Warsaw"/>
+                
+                <Label x:Name="WeatherDescription"
+                       HorizontalOptions="Center"
+                       FontSize="20"
+                       TextColor="SlateGray"
+                       Text="20°C, Cloudy"/>
             </StackLayout>
         </Grid>
     </ScrollView>
