--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -40,6 +40,35 @@
                    VerticalOptions="Start"
                    WidthRequest="300"
                    HeightRequest="300"/>
+            
+            <!-- Hourly weather -->
+            <CollectionView Grid.Row="4" x:Name="WeatherHourly" HeightRequest="100">
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout Orientation="Horizontal"
+                                        ItemSpacing="10"/>
+                </CollectionView.ItemsLayout>
+                
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Grid.Row="4" RowDefinitions="Auto, Auto, Auto">
+                            <Image Grid.Row="0"
+                                   HorizontalOptions="Center"
+                                   VerticalOptions="Start"
+                                   HeightRequest="50"
+                                   WidthRequest="50"/>
+                            
+                            <Label Grid.Row="1"
+                                   FontSize="30"
+                                   HorizontalOptions="Center"/>
+                            
+                            <Label Grid.Row="2"
+                                   FontSize="15"
+                                   HorizontalOptions="Center"
+                                   />
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
         </Grid>
     </ScrollView>
 </ContentPage>
