--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -5,7 +5,7 @@
              x:Class="kittyweather.Pages.WeatherPage">
     
     <ScrollView>
-        <Grid RowDefinitions="Auto, Auto, Auto, Auto, Auto" RowSpacing="20">
+        <Grid RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto" RowSpacing="20">
             <!-- Search bar -->
             <StackLayout Grid.Row="0" Margin="20, 20, 20, 0" Orientation="Horizontal" Spacing="20">
                 <Entry Placeholder="Search a city:"
@@ -42,12 +42,11 @@
                    HeightRequest="300"/>
             
             <!-- Weather Alerts -->
-            <Grid Grid.Row="3" Margin="20, 0, 20, 0">
+            <Grid Grid.Row="3" Margin="20, 0">
                 <BoxView HorizontalOptions="FillAndExpand" 
-                         VerticalOptions="Start"
-                         HeightRequest="120"
+                         VerticalOptions="FillAndExpand"
                          CornerRadius="10"
-                         Color="DarkGray"
+                         Color="Black"
                          Opacity="0.5"/>
                 
                 <Label Padding="10, 4, 0, 0"
@@ -56,13 +55,12 @@
                        VerticalOptions="Start"
                        FontSize="15"/>
                 
-                <Label Padding="10, 25, 10, 0"
+                <Label Padding="10, 30, 10, 10"
                        Text="SEVERE THUNDERSTORM WARNING issued by National Weather Service, until 8:00PM EST."
                        HorizontalOptions="Start"
                        VerticalOptions="Center"
                        FontSize="18"/>
             </Grid>
-            
             
             <!-- Hourly weather -->
             <CollectionView Grid.Row="4" x:Name="WeatherHourly" HeightRequest="100">
@@ -86,12 +84,46 @@
                             
                             <Label Grid.Row="2"
                                    FontSize="15"
-                                   HorizontalOptions="Center"
-                                   />
+                                   HorizontalOptions="Center"/>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
+
+            <!-- Humidity and Cloud Cover -->
+            <Grid Grid.Row="5" ColumnDefinitions="0.5*, 0.5*" Margin="20, 0" ColumnSpacing="20">
+                <!-- Column 0 -->
+                <BoxView Grid.Column="0"
+                         HorizontalOptions="FillAndExpand" 
+                         VerticalOptions="FillAndExpand"
+                         CornerRadius="10"
+                         Color="Black"
+                         Opacity="0.5"/>
+                
+                <Label Grid.Column="0"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Start"
+                       Text="Humidity:"
+                       FontSize="Large"/>
+
+                <Label Grid.Column="0"
+                       Padding="0, 30, 0, 0"
+                       x:Name="HumidityLabel"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Start"
+                       Text="50%"
+                       FontSize="60"
+                       />
+
+                <!-- Column 1 -->
+                <BoxView Grid.Column="1"
+                         HorizontalOptions="FillAndExpand" 
+                         VerticalOptions="Start"
+                         HeightRequest="100"
+                         CornerRadius="10"
+                         Color="DarkGray"
+                         Opacity="0.5"/>
+            </Grid>
         </Grid>
     </ScrollView>
 </ContentPage>
