--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -5,7 +5,7 @@
              x:Class="kittyweather.Pages.WeatherPage">
     
     <ScrollView>
-        <Grid RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto" RowSpacing="20">
+        <Grid RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto" RowSpacing="20">
             <!-- Search bar -->
             <StackLayout Grid.Row="0" Margin="20, 20, 20, 0" Orientation="Horizontal" Spacing="20">
                 <Entry Placeholder="Search a city:"
@@ -135,6 +135,55 @@
                        HorizontalOptions="Center"
                        VerticalOptions="Start"
                        Text="74%"
+                       FontSize="60"
+                />
+            </Grid>
+
+            <!-- -->
+            <Grid Grid.Row="6" ColumnDefinitions="0.5*, 0.5*" Margin="20, 0" ColumnSpacing="20">
+                <!-- Column 0 -->
+                <BoxView Grid.Column="0"
+                         HorizontalOptions="FillAndExpand" 
+                         VerticalOptions="FillAndExpand"
+                         CornerRadius="10"
+                         Color="Black"
+                         Opacity="0.5"/>
+
+                <Label Grid.Column="0"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Start"
+                       Text="Air pressure:"
+                       FontSize="Large"/>
+
+                <Label Grid.Column="0"
+                       Padding="0, 45, 0, 0"
+                       x:Name="AirPressureLabel"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Start"
+                       Text="1010 hPa"
+                       FontSize="40"
+                />
+
+                <!-- Column 1 -->
+                <BoxView Grid.Column="1"
+                         HorizontalOptions="FillAndExpand" 
+                         VerticalOptions="FillAndExpand"
+                         CornerRadius="10"
+                         Color="Black"
+                         Opacity="0.5"/>
+
+                <Label Grid.Column="1"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Start"
+                       Text="Visibility:"
+                       FontSize="Large"/>
+
+                <Label Grid.Column="1"
+                       Padding="0, 30, 0, 0"
+                       x:Name="VisibiltyLabel"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Start"
+                       Text="10KM"
                        FontSize="60"
                 />
             </Grid>
