Added UV Index and Precipitation Label

--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -5,7 +5,7 @@
              x:Class="kittyweather.Pages.WeatherPage">
     
     <ScrollView>
-        <Grid RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto" RowSpacing="20">
+        <Grid RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto" RowSpacing="20">
             <!-- Search bar -->
             <StackLayout Grid.Row="0" Margin="20, 20, 20, 0" Orientation="Horizontal" Spacing="20">
                 <Entry Placeholder="Search a city:"
@@ -130,7 +130,7 @@
                        FontSize="Large"/>
 
                 <Label Grid.Column="1"
-                       Padding="0, 30, 0, 0"
+                       Padding="0, 25, 0, 0"
                        x:Name="CloudCoverLabel"
                        HorizontalOptions="Center"
                        VerticalOptions="Start"
@@ -139,7 +139,7 @@
                 />
             </Grid>
 
-            <!-- -->
+            <!-- Air Pressure and Visibility -->
             <Grid Grid.Row="6" ColumnDefinitions="0.5*, 0.5*" Margin="20, 0" ColumnSpacing="20">
                 <!-- Column 0 -->
                 <BoxView Grid.Column="0"
@@ -156,13 +156,18 @@
                        FontSize="Large"/>
 
                 <Label Grid.Column="0"
-                       Padding="0, 45, 0, 0"
+                       Padding="0, 25, 0, 0"
                        x:Name="AirPressureLabel"
                        HorizontalOptions="Center"
                        VerticalOptions="Start"
-                       Text="1010 hPa"
-                       FontSize="40"
-                />
+                       Text="1010"
+                       FontSize="60" />
+
+                <Label Grid.Column="0"
+                       HorizontalOptions="Center"
+                       VerticalOptions="EndAndExpand"
+                       Text="mbar"
+                       FontSize="15"/>
 
                 <!-- Column 1 -->
                 <BoxView Grid.Column="1"
@@ -179,12 +184,66 @@
                        FontSize="Large"/>
 
                 <Label Grid.Column="1"
-                       Padding="0, 30, 0, 0"
+                       Padding="0, 25, 0, 0"
                        x:Name="VisibiltyLabel"
                        HorizontalOptions="Center"
                        VerticalOptions="Start"
                        Text="10KM"
                        FontSize="60"
+                />
+            </Grid>
+
+            <!-- UV Index and Precipitation -->
+            <Grid Grid.Row="7" ColumnDefinitions="0.5*, 0.5*" Margin="20, 0" ColumnSpacing="20">
+                <!-- Column 0 -->
+                <BoxView Grid.Column="0"
+                         HorizontalOptions="FillAndExpand" 
+                         VerticalOptions="FillAndExpand"
+                         CornerRadius="10"
+                         Color="Black"
+                         Opacity="0.5"/>
+
+                <Label Grid.Column="0"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Start"
+                       Text="UV Index:"
+                       FontSize="Large"/>
+
+                <Label Grid.Column="0"
+                       Padding="0, 25, 0, 0"
+                       x:Name="UVIndexLabel"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Start"
+                       Text="3"
+                       FontSize="60" />
+
+                <Label Grid.Column="0"
+                       HorizontalOptions="Center"
+                       VerticalOptions="EndAndExpand"
+                       Text="Low"
+                       FontSize="15"/>
+
+                <!-- Column 1 -->
+                <BoxView Grid.Column="1"
+                         HorizontalOptions="FillAndExpand" 
+                         VerticalOptions="FillAndExpand"
+                         CornerRadius="10"
+                         Color="Black"
+                         Opacity="0.5"/>
+
+                <Label Grid.Column="1"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Start"
+                       Text="Precipitation:"
+                       FontSize="Large"/>
+
+                <Label Grid.Column="1"
+                       Padding="0, 25, 0, 0"
+                       x:Name="PrecipitationLabel"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Start"
+                       Text="13mm"
+                       FontSize="55"
                 />
             </Grid>
         </Grid>
