--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -2,13 +2,15 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="kittyweather.Pages.WeatherPage">
+             x:Class="kittyweather.Pages.WeatherPage"
+             BackgroundColor="LightBlue">
     
     <ScrollView>
         <Grid RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto" RowSpacing="20">
             <!-- Search bar -->
             <StackLayout Grid.Row="0" Margin="20, 20, 20, 0" Orientation="Horizontal" Spacing="20">
                 <Entry Placeholder="Search a city:"
+                       PlaceholderColor="Black"
                        HorizontalOptions="FillAndExpand"/>
                 
                 <Button ImageSource="search.svg" 
