Edited "WEATHER ALERT" text to be bold

--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -65,6 +65,7 @@
                 
                 <Label Padding="10, 4, 0, 0"
                        Text="WEATHER ALERT:"
+                       FontAttributes="Bold"
                        HorizontalOptions="Start"
                        VerticalOptions="Start"
                        FontSize="15"/>
